// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering works 1`] = `
<span
  data-bangle-name="emoji"
  data-emojikind="horse"
  draggable="true"
>
  🐴
</span>
`;

exports[`Unknown emoji puts question mark 1`] = `
<span
  data-bangle-name="emoji"
  data-emojikind="unknown_emoji"
  draggable="true"
>
  ❓
</span>
`;
